Final Project/2048/local/logs/project.log
2021-12-21T04:11:11.963Z - normal: Load ~/.CocosCreator/settings.json
2021-12-21T04:11:12.019Z - normal: Initializing Asset Database
2021-12-21T04:11:12.022Z - normal: checking language setting...
2021-12-21T04:11:12.023Z - normal: Language: en
2021-12-21T04:11:12.566Z - success: preview server running at http://localhost:7456
2021-12-21T04:11:12.580Z - success: protocol editor-framework registered
2021-12-21T04:11:12.580Z - success: protocol app registered
2021-12-21T04:11:12.580Z - success: protocol theme registered
2021-12-21T04:11:12.580Z - success: protocol packages registered
2021-12-21T04:11:12.581Z - success: protocol uuid registerred
2021-12-21T04:11:12.581Z - success: protocol db registerred
2021-12-21T04:11:12.581Z - success: protocol thumbnail registerred
2021-12-21T04:11:12.581Z - success: protocol unpack registerred
2021-12-21T04:11:12.581Z - success: protocol disable-commonjs registerred
2021-12-21T04:11:14.512Z - normal: connected!
2021-12-21T04:11:14.513Z - normal: Check project /Users/fe-thienchi-fresher/finalProject-2048
2021-12-21T04:11:14.514Z - normal: Initializing project /Users/fe-thienchi-fresher/finalProject-2048
2021-12-21T04:11:14.796Z - normal: Initializing Cocos2d
2021-12-21T04:11:15.315Z - normal: Initializing engine extends
2021-12-21T04:11:15.339Z - success: alipay-adapter loaded
2021-12-21T04:11:15.348Z - success: asset-db-debugger loaded
2021-12-21T04:11:15.354Z - success: baidu-adapter loaded
2021-12-21T04:11:15.355Z - success: color-picker loaded
2021-12-21T04:11:15.451Z - success: fb-audience-network loaded
2021-12-21T04:11:15.485Z - success: fb-live-stream loaded
2021-12-21T04:11:15.486Z - success: google-play-instant loaded
2021-12-21T04:11:15.489Z - success: huawei-runtime loaded
2021-12-21T04:11:15.647Z - success: cpk-publish loaded
2021-12-21T04:11:15.647Z - success: jsb-adapter loaded
2021-12-21T04:11:15.651Z - success: oppo-runtime loaded
2021-12-21T04:11:15.654Z - success: package-manager loaded
2021-12-21T04:11:15.743Z - success: qqplay-adapter loaded
2021-12-21T04:11:15.744Z - success: runtime-dev-tools loaded
2021-12-21T04:11:15.770Z - success: sdkbox loaded
2021-12-21T04:11:15.774Z - success: tester loaded
2021-12-21T04:11:15.776Z - success: ui-kit-preview-extra loaded
2021-12-21T04:11:15.778Z - success: ui-kit-preview loaded
2021-12-21T04:11:15.782Z - success: ui-kit loaded
2021-12-21T04:11:15.786Z - success: vivo-runtime loaded
2021-12-21T04:11:15.792Z - success: weapp-adapter loaded
2021-12-21T04:11:15.792Z - success: xiaomi-adapter loaded
2021-12-21T04:11:15.794Z - success: alipay-minigame loaded
2021-12-21T04:11:15.829Z - success: assets loaded
2021-12-21T04:11:15.831Z - success: builder loaded
2021-12-21T04:11:16.018Z - success: cocos-services loaded
2021-12-21T04:11:16.024Z - success: console loaded
2021-12-21T04:11:16.052Z - success: fb-instant-games loaded
2021-12-21T04:11:16.056Z - success: game-window loaded
2021-12-21T04:11:16.057Z - success: google-instant-games loaded
2021-12-21T04:11:16.061Z - success: hierarchy loaded
2021-12-21T04:11:16.065Z - success: inspector loaded
2021-12-21T04:11:16.066Z - success: keystore loaded
2021-12-21T04:11:16.070Z - success: node-library loaded
2021-12-21T04:11:16.072Z - success: package-asset loaded
2021-12-21T04:11:16.073Z - success: preferences loaded
2021-12-21T04:11:16.076Z - success: project-exporter loaded
2021-12-21T04:11:16.080Z - success: project-importer loaded
2021-12-21T04:11:16.083Z - success: project-settings loaded
2021-12-21T04:11:16.087Z - success: scene loaded
2021-12-21T04:11:16.088Z - success: simulator-debugger loaded
2021-12-21T04:11:16.090Z - success: sprite-editor loaded
2021-12-21T04:11:16.094Z - success: store loaded
2021-12-21T04:11:16.100Z - success: timeline loaded
2021-12-21T04:11:16.104Z - success: xiaomi-runtime loaded
2021-12-21T04:11:20.567Z - normal: Loading packages
2021-12-21T04:11:20.571Z - normal: Watching packages
2021-12-21T04:11:20.663Z - normal: Run Application
2021-12-21T04:11:24.607Z - info: Cocos Services load base data!
2021-12-21T04:25:54.404Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-thienchi-fresher/finalProject-2048/assets/Script/mainController.js, message: Compile error: SyntaxError: /Users/fe-thienchi-fresher/finalProject-2048/assets/Script/mainController.js: this is a reserved word (171:46)
  169 |     for (let i = 0; i <= 15; i++) {
  170 |       const obj  = {
> 171 |         0 : this.indexArr[i].color = color0 , this.indexArr[i].children[0].color = color0,
      |                                               ^
  172 |       }
  173 | 
  174 |       // if (this.indexArr[i].children[0].getComponent(cc.Label).string == 0) {
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp$3.checkReservedWord (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4347:10)
    at Parser.pp$3.parseObjectProperty (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4121:10)
    at Parser.pp$3.parseObjPropValue (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4140:84)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4048:10)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
2021-12-21T04:45:16.427Z - info: Only the prefab node "Item" and its child nodes are saved.
2021-12-21T04:45:17.412Z - info: Only the prefab node "Item" and its child nodes are saved.
2021-12-21T09:57:23.784Z - normal: Start building with options : {
  "actualPlatform": "web-mobile",
  "android-instant": {
    "REMOTE_SERVER_ROOT": "",
    "host": "",
    "pathPattern": "",
    "recordPath": "",
    "scheme": "https",
    "skipRecord": false
  },
  "apiLevel": "",
  "appABIs": [],
  "appBundle": false,
  "baidugame": {
    "REMOTE_SERVER_ROOT": "",
    "appid": "testappid",
    "orientation": "portrait",
    "subContext": ""
  },
  "buildPath": "/Users/fe-thienchi-fresher/finalProject-2048/build",
  "debug": false,
  "dest": "/Users/fe-thienchi-fresher/finalProject-2048/build/web-mobile",
  "embedWebDebugger": false,
  "encryptJs": true,
  "excludeScenes": [],
  "excludedModules": [],
  "fb-instant-games": {},
  "includeSDKBox": false,
  "inlineSpriteFrames": true,
  "inlineSpriteFrames_native": true,
  "md5Cache": false,
  "mergeStartScene": false,
  "optimizeHotUpdate": false,
  "orientation": {
    "landscapeLeft": true,
    "landscapeRight": true,
    "portrait": false,
    "upsideDown": false
  },
  "packageName": "org.cocos2d.helloworld",
  "platform": "web-mobile",
  "previewHeight": "720",
  "previewWidth": "1280",
  "qqplay": {
    "REMOTE_SERVER_ROOT": "",
    "orientation": "portrait",
    "zip": false
  },
  "scenes": [
    "2d2f792f-a40c-49bb-a189-ed176a246e49"
  ],
  "sourceMaps": false,
  "startScene": "2d2f792f-a40c-49bb-a189-ed176a246e49",
  "template": "link",
  "title": "FinalProject",
  "useDebugKeystore": true,
  "vsVersion": "auto",
  "webOrientation": "auto",
  "wechatgame": {
    "REMOTE_SERVER_ROOT": "",
    "appid": "wx6ac3f5090a6b99c5",
    "orientation": "portrait",
    "separate_engine": false,
    "subContext": ""
  },
  "xxteaKey": "c753ae7f-f3ce-48",
  "zipCompressJs": true,
  "project": "/Users/fe-thienchi-fresher/finalProject-2048",
  "projectName": "FinalProject",
  "debugBuildWorker": false
}
2021-12-21T09:57:23.788Z - normal: Building /Users/fe-thienchi-fresher/finalProject-2048
2021-12-21T09:57:23.788Z - normal: Destination /Users/fe-thienchi-fresher/finalProject-2048/build/web-mobile
2021-12-21T09:57:23.920Z - normal: Delete /Users/fe-thienchi-fresher/finalProject-2048/build/web-mobile/subpackages/**/*,/Users/fe-thienchi-fresher/finalProject-2048/build/web-mobile/**/*
2021-12-21T09:57:25.961Z - normal: Start building assets
2021-12-21T09:57:25.961Z - normal: Start spawn build-worker
2021-12-21T09:57:26.660Z - normal: Finish spawn build-worker
2021-12-21T09:57:26.660Z - normal: Start init build-worker
2021-12-21T09:57:29.741Z - normal: Finish init build-worker
2021-12-21T09:57:29.741Z - normal: Start build-assets in worker
2021-12-21T09:57:29.939Z - warn: Script attached to "mainController" in scene "helloworld.fire" is missing or invalid. Detailed information:
Node path: "Canvas/mainController"
Asset url: "db://assets/Scene/helloworld.fire"
Script UUID: "b998fb67-0177-4f88-a597-b7436700f1c0"
Class ID: "b998ftnAXdPiKWXt0NnAPHA"

2021-12-21T09:57:30.355Z - normal: Finish build-assets in worker
2021-12-21T09:57:30.360Z - normal: Finish building assets
2021-12-21T09:57:30.377Z - normal: Start building plugin scripts
2021-12-21T09:57:30.453Z - normal: Generating main.js from /Applications/CocosCreator.app/Contents/Resources/static/build-templates/shares/main.js
2021-12-21T09:57:30.464Z - normal: Generating html from /Applications/CocosCreator.app/Contents/Resources/static/build-templates/web-mobile/template/index.html
2021-12-21T09:57:30.484Z - normal: Built to "/Users/fe-thienchi-fresher/finalProject-2048/build/web-mobile" successfully
